--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
@@ -30,7 +30,10 @@
                 <div class="card-body">
                     <p class="eventHeading">Event Details</p>
 
-                    <p>Doddington Village Sports & Carnival are proud to host Santa's visit to our village each year. In the cold dark days of December, we bring Santa around to ALL houses in the village, with a little festive music to sing along to. Kids of all ages are welcome to come out and say hi!</p>
+                    <p>Doddington Village Sports & Carnival are proud to host Santa's visit to our village each year.</p>
+                    <p>In the cold dark days of December, we bring Santa around to ALL houses in the village, with a little festive music to sing along to.</p>
+                    <p>Kids of all ages are welcome to come out and say hi!</p>
+                    <p>Make sure to check out the <a href="santarun/routes">Santa Run Routes</a> page and see which day we're planning on visiting your area, and then on the day, use the <a href="santarun/tracker">Santa Tracker</a> to see exactly how far away we are!</p>
 
                     <SharedNextEvent Tag="Santa Run" />
 
