--- a/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSportsAfternoon/SportsAfternoonPage.razor
@@ -55,7 +55,7 @@
 
             <div class="row eventBanner">
                 <div class="title">
-                    Sports Afternoon
+                    Children's Sports Afternoon
                 </div>
                 <div class="">
                     23 September 2023
