--- a/DoddingtonCarnival.Blazor/Pages/HomePage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/HomePage.razor
@@ -14,7 +14,7 @@
 
     <div class="container">
 
-        <p class="text-center bold-text">Doddington, Cambridgeshire, UK</p>
+        <p class="orangeFlash">Doddington, Cambridgeshire, UK</p>
 
         <div class="masonry features">
             <div class="mItem">
@@ -113,6 +113,8 @@
                 </div>
             </div>
         </div>
+
+        <div class="orangeFlash">New to Doddington Carnival? <a href="new">Find out more about us!</a></div>
     </div>
 </div>
 
