--- a/DoddingtonCarnival.Blazor/Pages/HomePage.razor.css
+++ b/DoddingtonCarnival.Blazor/Pages/HomePage.razor.css
@@ -1,9 +1,9 @@
-﻿.carnivalpage{
+﻿.carnivalpage {
     padding-top: 0;
 }
 
 .jumbotron {
-} 
+}
 
     .jumbotron.doddingtonLorry {
         background-image: url(images/Pages/Home/CarnivalLorry.jpg);
@@ -61,6 +61,16 @@ img {
     margin-top: 20px;
     text-align: right;
 }
+
+.orangeFlash {
+    background-color: #E3AF1A;
+    color: white;
+    font-size: 1.4em;
+    font-weight: bold;
+    text-align: center;
+    line-height: 2em;
+}
+
 
 @media (max-width: 1199px) {
     .masonry {
