More meta info about Carnival added.

--- a/DoddingtonCarnival.Blazor/Pages/FeatureAboutUs/AboutUsPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureAboutUs/AboutUsPage.razor
@@ -21,6 +21,16 @@
             <li class="navbr-item mb-2">We absolutely love this stuff and hope that you might, too.</li>
         </ul>
 
+        <p>
+            Current Committee Heads are:
+            <ul>
+                <li>Chair - Mr Jason Shepherd.</li>
+                <li>Vice Chair - Mr Adam Rush.</li>
+                <li>Treasurer - Miss Erica Mason.</li>
+                <li>Secretary - Mr Brett Rigby.</li>
+            </ul>
+        </p>
+
     </div>
 </div>
 
