--- a/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalComponent.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureCarnival/CarnivalComponent.razor
@@ -36,6 +36,7 @@
                 <p class="eventHeading">Have a Float in the Parade</p>
                 <p>Big floats and little floats are welcome!</p>
                 <p>Drop us a quick email to say that you're interested in a float, and we'll get in touch with how you get started and where to get the stuff from!</p>
+                <p>We'll even put you in touch with some folks that have been there and done it, and can help save you time and money!</p>
             </div>
 
         </div>
