--- a/DoddingtonCarnival.Blazor/Pages/FeatureMedia/MediaPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureMedia/MediaPage.razor
@@ -35,12 +35,13 @@
                     <p>
                         <ul>
                             <li>April - Prince and Princess Selection Disco.</li>
-                            <li>June - Scarecrow Competition.</li>
-                            <li>July - Carnival Parade/Procession and Sports Afternoon.</li>
+                            <li>June - <a href="scarecrows">Scarecrow Competition</a>.</li>
+                            <li>July - <a href="carnival">Carnival Parade/Procession</a> and <a href="sportsafternoon">Children's Sports Afternoon</a>.</li>
                             <li>September - Presentation Awards Disco.</li>
-                            <li>December - The Santa Run - a 3 night tour of Doddington with Father Christmas.</li>
+                            <li>December - <a href="santarun">The Santa Run</a> - a 3 night tour of Doddington with Father Christmas.</li>
                         </ul>
                     </p>
+                    <p>In addition, we hold various <a href="pubquiz">Pub Quizzes</a> (fundraiser events) several times a year.</p>
 
                     <p class="eventHeading">Address/Location</p>
                     <p>
@@ -71,7 +72,9 @@
                                 <p>16KB, GIF on a white background, greyscale.</p>
                             </li>
                         </ul>
-                        These are approved for use in print and online publication.
+                    </p>
+                    <p>
+                        These are approved for use in print and online publication. The images can be downloaded and used as-is, or referred to in-place using their respective URLs.
                     </p>
 
                     <p class="eventHeading">Organiser Contact Details</p>
