--- a/DoddingtonCarnival.Blazor/Shared/NavMenu.razor
+++ b/DoddingtonCarnival.Blazor/Shared/NavMenu.razor
@@ -55,18 +55,23 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="faq">
-                <span class="oi oi-media-play" aria-hidden="true"></span> FAQs
+            <NavLink class="nav-link" href="sponsorssupporters">
+                <span class="oi oi-media-play" aria-hidden="true"></span> Sponsors & Supporters
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="inthenews">
+                <span class="oi oi-media-play" aria-hidden="true"></span> In The News
+            </NavLink>
+        </div> 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="donations">
                 <span class="oi oi-media-play" aria-hidden="true"></span> Donations
             </NavLink>
-        </div>        
+        </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="inthenews">
-                <span class="oi oi-media-play" aria-hidden="true"></span> In The News
+            <NavLink class="nav-link" href="faq">
+                <span class="oi oi-media-play" aria-hidden="true"></span> FAQs
             </NavLink>
         </div>
         <div class="nav-item px-3">
