--- a/DoddingtonCarnival.Blazor/Shared/Venues/TheThreeTunsComponent.razor
+++ b/DoddingtonCarnival.Blazor/Shared/Venues/TheThreeTunsComponent.razor
@@ -6,9 +6,12 @@
             </div>
             <div class="card-body">
 
-
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-md-4 col-lg-4">
+                        <img src="images/venues/thethreetuns.jpg" style="width: 100%; border-radius: 25px;" />
+                    </div>
+
+                    <div class="col-md-8 col-lg-8">
                         <p>There are plenty of other events being held at <span class="bold-text">The Three Tuns</span> - find out more online:</p>
 
                         <p>
@@ -20,9 +23,6 @@
                         <p>
                             The Three Tuns,<br />8 New Street,<br />Doddington,<br />Cambridgeshire,<br />United Kingdom
                         </p>
-                    </div>
-                    <div class="col-6">
-                        <img src="images/venues/thethreetuns.jpg" style="width: 100%; border-radius: 25px;" />
                     </div>
                 </div>
 
