--- a/DoddingtonCarnival.Blazor/Pages/FeatureSponsorsSupporters/SponsorsSupportersPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSponsorsSupporters/SponsorsSupportersPage.razor
@@ -34,13 +34,27 @@
                     <p class="eventHeading">Title Sponsor</p>
                     <p>
                         <div class="row">
-                            <div class="col-2">
+                            <div class="col-md-2 col-lg-2">
                                 <a href="https://www.cb3consulting.co.uk/" target="_blank">
                                     <img src="images\pages\carnival\sponsors\cb3.png" width="100%" />
                                 </a>
                             </div>
-                            <div class="col">
+                            <div class="col-md-10 col-lg-10">
                                 <DoddingtonCarnival.Blazor.Shared.Sponsors._2023_CB3 />
+                            </div>
+                        </div>
+                    </p>
+
+                    <p class="eventHeading">Supporters</p>
+                    <p>
+                        <div class="row">
+                            <div class="col-md-2 col-lg-2">
+                                <a href="https://isle-of-ely.thewi.org.uk/find-wi/doddington" target="_blank">
+                                    <img src="images\pages\sponsorssuppliers\wi-logo.jpg" width="100%" />
+                                </a>
+                            </div>
+                            <div class="col-md-10 col-lg-10">
+                                <DoddingtonCarnival.Blazor.Shared.Sponsors.TheWI />
                             </div>
                         </div>
                     </p>
