--- a/DoddingtonCarnival.Blazor/Shared/Venues/RecreationalFieldComponent.razor
+++ b/DoddingtonCarnival.Blazor/Shared/Venues/RecreationalFieldComponent.razor
@@ -7,7 +7,10 @@
             <div class="card-body">
 
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-md-4 col-lg-4">
+                        <img src="images/venues/DoddingtonPavilionAndRecreationGround.jpg" style="width: 100%; border-radius: 25px;" />
+                    </div>
+                    <div class="col-md-8 col-lg-8">
 
                         <p>There are plenty of other events being held at <span class="bold-text">The Doddington Pavilion & Recreational Field</span> - find out more.</p>
                         <p>
@@ -20,9 +23,7 @@
                         </p>
 
                     </div>
-                    <div class="col-6">
-                        <img src="images/venues/DoddingtonPavilionAndRecreationGround.jpg" style="width: 100%; border-radius: 25px;" />
-                    </div>
+
                 </div>
             </div>
         </div>
