Added links to the footer

--- a/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
+++ b/DoddingtonCarnival.Blazor/Shared/MainLayout.razor
@@ -151,7 +151,11 @@
 								<li><a href="princeandprincess" class="p-0 text-muted">Prince & Princess</a> </li>
 								<li><a href="santarun" class="p-0 text-muted">Santa Run</a></li>
 								<li><a href="themes" class="p-0 text-muted">Themes</a></li>
+                                <li><a href="sponsorssupporters" class="p-0 text-muted">Sponsors & Supporters</a></li>
+                                <li><a href="inthenews" class="p-0 text-muted">In the News</a></li>
 								<li><a href="donations" class="p-0 text-muted">Donations</a></li>
+                                <li><a href="faq" class="p-0 text-muted">FAQs</a></li>
+                                <li><a href="media" class="p-0 text-muted">Media</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-4 col-12 mb-3">
