--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunRoutes/SantaRunRoutesPage.razor
@@ -16,7 +16,7 @@
 
         <div class="container col-xxl-8 px-4 py-1">
 
-            <div class="row"><img src="images/pages/santarun/2022Route.JPG" style="width: 100%" /></div>
+            <div class="row"><img src="images/pages/santarun/2023Route.JPG" style="width: 100%" /></div>
 
             <div class="row eventBanner">
                 <div class="title">
@@ -36,12 +36,12 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-lg-6 col-12">
-                            <img src="images/pages/santarun/2022Route.JPG" style="width: 100%" />
+                            <img src="images/pages/santarun/2023Route.JPG" style="width: 100%" />
                         </div>
                         <div class="col-lg-6 col-12">
                             <p class="lead">Download the routes (PDF) file.</p>
 
-                            <a href="/pdfs/SantaRun/2022%20Santa%20Run%20Poster.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
+                            <a href="/pdfs/SantaRun/2023%20Santa%20Run%20Route.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
                         </div>
                     </div>
                 </div>
