Updated the Santa Run page.

--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/SantaRunPage.razor
@@ -33,7 +33,7 @@
                     <p>Doddington Village Sports & Carnival are proud to host Santa's visit to our village each year.</p>
                     <p>In the cold dark days of December, we bring Santa around to ALL houses in the village, with a little festive music to sing along to.</p>
                     <p>Kids of all ages are welcome to come out and say hi!</p>
-                    <p>Make sure to check out the <a href="santarun/routes">Santa Run Routes</a> page and see which day we're planning on visiting your area, and then on the day, use the <a href="santarun/tracker">Santa Tracker</a> to see exactly how far away we are!</p>
+                    <p>Make sure to check out the <a href="santarun/routes">Santa Run Routes</a> page and see which day we're planning on visiting your area, and then on the day, use the Santa Tracker (below) to see exactly how far away we are!</p>
 
                     <SharedNextEvent Tag="Santa Run" />
 
@@ -44,6 +44,24 @@
                 </div>
             </div>
 
+            <div class="card eventCard">
+                <div class="card-header">
+                    Santa Tracker
+                </div>
+                <div class="card-body">
+                    <iframe style="width:100%;height:50vh;" src="https://santatrackerdodders.azurewebsites.net/map/i/doddingtoncarnival" frameborder="0" allowfullscreen></iframe>
+
+                    <h5 style="font-size:medium;">Our Santa Tracker will ping everytime the sleigh moves around Doddington, showing you exactly where we are on each evening!</h5>
+                    <div class="col bold-text" style="text-align: center;">
+                        @*<p style=" font-size:medium;">Coming soon! Watch this space!</p>*@
+                        <p style=" font-size:medium;">No special device or software needed!</p>
+                    </div>
+
+                    <h5 style="font-size:medium;">We will also update our location and photos from each evening on <a href="https://www.facebook.com/doddingtoncarnivalandsports" target="_blank">our Facebook Page</a>, too, so make sure that you don't miss us!</h5>
+
+
+                </div>
+            </div>
 
             <div class="row">
                 <div class="col-lg-6 col-12">
@@ -67,25 +85,6 @@
                         <div class="card-body">
                             <p>Download the Santa Run Poster</p>
                             <a href="/pdfs/SantaRun/2023 Santa Run Poster.pdf" target="_blank" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Download now</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="card eventCard">
-                <div class="card-header">
-                    Santa Tracker
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-lg-6 col-12">
-                            <img src="images/Pages/SantaRun/Titles/SantaRun.png" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-                        </div>
-                        <div class="col-lg-6 col-12">
-                            <p>Want to know where we are in the village with Santa Claus?</p>
-                            <p>Find us on the map and see how far away we are from you!</p>
-
-                            <a href="/santarun/tracker" class="btn btn-primary btn-block btn-lg px-4 me-md-2">Go to the Santa Tracker</a>
                         </div>
                     </div>
                 </div>
