--- a/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
+++ b/DoddingtonCarnival.Blazor/Pages/FeatureSantaRun/FeatureSantaRunTracker/SantaRunTrackerPage.razor
@@ -18,7 +18,9 @@
 
             <div class="card eventCard">
                 <div class="card-body">
-                    <iframe style="width:100%;height:50vh;" src="https://track-santa.co.uk/map/i/doddingtoncarnival" frameborder="0" allowfullscreen></iframe>
+                    <iframe style="width:100%;height:50vh;" src="https://santatrackerdodders.azurewebsites.net/map/i/doddingtoncarnival" frameborder="0" allowfullscreen></iframe>
+                    
+
                 </div>
             </div>
 
